--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "font-awesome": "4.7.0",
     "gulp": "^3.9.1",
     "jquery": "3.2.1",
+    "leaflet": "1.2.0",
     "ng-jhipster": "0.2.7",
     "ng2-webstorage": "1.8.0",
     "ngx-cookie": "1.0.0",
@@ -33,7 +34,7 @@
     "zone.js": "0.8.13"
   },
   "devDependencies": {
-    "@angular/cli": "1.2.0",
+    "@angular/cli": "^1.2.0",
     "@angular/compiler-cli": "4.2.6",
     "@types/jasmine": "2.5.53",
     "@types/node": "8.0.13",
@@ -64,9 +65,12 @@
     "karma-webpack": "2.0.4",
     "merge-jsons-webpack-plugin": "1.0.8",
     "ngc-webpack": "3.0.0",
+    "node-sass": "4.5.3",
     "phantomjs-prebuilt": "2.1.14",
+    "postcss-loader": "2.0.6",
     "proxy-middleware": "0.15.0",
     "rimraf": "2.6.1",
+    "sass-loader": "6.0.6",
     "sourcemap-istanbul-instrumenter-loader": "0.2.0",
     "string-replace-webpack-plugin": "0.1.3",
     "style-loader": "0.18.2",
@@ -74,17 +78,14 @@
     "tslint": "5.5.0",
     "tslint-loader": "3.5.3",
     "typescript": "2.4.1",
-    "sass-loader": "6.0.6",
-    "node-sass": "4.5.3",
-    "postcss-loader": "2.0.6",
-    "xml2js": "0.4.17",
+    "web-app-manifest-loader": "0.1.1",
     "webpack": "3.3.0",
     "webpack-dev-server": "2.5.1",
     "webpack-merge": "4.1.0",
     "webpack-notifier": "1.5.0",
     "webpack-visualizer-plugin": "0.1.11",
-    "web-app-manifest-loader": "0.1.1",
-    "write-file-webpack-plugin": "4.1.0"
+    "write-file-webpack-plugin": "4.1.0",
+    "xml2js": "0.4.17"
   },
   "engines": {
     "node": ">=6.9.0"
