--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "@angular/platform-browser": "4.2.6",
     "@angular/platform-browser-dynamic": "4.2.6",
     "@angular/router": "4.2.6",
-    "@ng-bootstrap/ng-bootstrap": "1.0.0-alpha.28",
+    "@ng-bootstrap/ng-bootstrap": "1.0.0-beta.5",
     "bootstrap": "4.0.0-alpha.6",
     "core-js": "2.4.1",
     "font-awesome": "4.7.0",
@@ -34,7 +34,7 @@
     "zone.js": "0.8.13"
   },
   "devDependencies": {
-    "@angular/cli": "^1.2.0",
+    "@angular/cli": "^1.5.0",
     "@angular/compiler-cli": "4.2.6",
     "@types/jasmine": "2.5.53",
     "@types/node": "8.0.13",
