--- a/package.json
+++ b/package.json
@@ -17,9 +17,11 @@
     "@angular/platform-browser-dynamic": "4.2.6",
     "@angular/router": "4.2.6",
     "@ng-bootstrap/ng-bootstrap": "1.0.0-beta.5",
+    "@types/jquery": "3.2.16",
     "bootstrap": "4.0.0-alpha.6",
     "core-js": "2.4.1",
     "font-awesome": "4.7.0",
+    "fullcalendar": "3.7.0",
     "gulp": "^3.9.1",
     "jquery": "3.2.1",
     "leaflet": "1.2.0",
