--- a/src/main/docker/postgresql.yml
+++ b/src/main/docker/postgresql.yml
@@ -1,6 +1,6 @@
 version: '2'
 services:
-    socialgame-postgresql:
+    socialgame-postgresql-dev:
         image: postgres:9.6.2
         # volumes:
         #     - ~/volumes/jhipster/socialGame/postgresql/:/var/lib/postgresql/data/
