--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@ng-bootstrap/ng-bootstrap": "1.0.0-beta.5",
     "@types/jquery": "3.2.16",
     "angular-gridster2": "3.16.3",
+    "angular2-multiselect-dropdown": "2.2.1",
     "bootstrap": "4.0.0-beta.2",
     "core-js": "2.4.1",
     "font-awesome": "4.7.0",
