--- a/src/main/resources/config/application-prod.yml
+++ b/src/main/resources/config/application-prod.yml
@@ -28,7 +28,7 @@ spring:
             enabled: false
     datasource:
         type: com.zaxxer.hikari.HikariDataSource
-        url: jdbc:postgresql://localhost:5432/socialGame
+        url: jdbc:postgresql://localhost:5433/socialGame
         username: socialGame
         password:
     jpa:
@@ -46,10 +46,13 @@ spring:
             cluster-name:
             cluster-nodes: localhost:9300
     mail:
-        host: localhost
-        port: 25
+        host: smtp.gmail.com
+        port: 587
         username:
         password:
+        properties:
+            mail.smtp.auth: true
+            mail.smtp.starttls.enable: true
     thymeleaf:
         cache: true
     zipkin: # Use the "zipkin" Maven profile to have the Spring Cloud Zipkin dependencies
@@ -80,7 +83,7 @@ liquibase:
 #        keyAlias: socialGame
 # ===================================================================
 server:
-    port: 8080
+    port: 8085
     compression:
         enabled: true
         mime-types: text/html,text/xml,text/plain,text/css, application/javascript, application/json
@@ -110,7 +113,7 @@ jhipster:
                 token-validity-in-seconds-for-remember-me: 2592000
     mail: # specific JHipster mail property, for standard properties see MailProperties
         from: socialGame@localhost
-        base-url: http://my-server-url-to-change # Modify according to your server's URL
+        base-url: http://10.197.19.120:8085 # Modify according to your server's URL
     metrics: # DropWizard Metrics configuration, used by MetricsConfiguration
         jmx.enabled: true
         graphite:
